css/styles.css
body {
    font-family: Roboto, sans-serif;
    color: #434455;
    background-color: #ffffff;
}

ul,
ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
}

a {
    text-decoration: none;
}

img {
    display: block;
}

.container {
    max-width: 1158px;
    margin: 0 auto;
    padding: 0 15px;
    
}

.section {
    padding: 120px 0;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

.header {
    border-bottom: 1px solid #e7e9fc;
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
        0px 1px 1px rgba(46, 47, 66, 0.16),
        0px 1px 6px rgba(46, 47, 66, 0.08);
}

.header-container {
    display: flex;
    align-items: center;
}

.header-nav {
    display: flex;
    align-items: center;
}

.menu {
    display: flex;
    gap: 40px;
}

.menu-link {
    display: block;
    padding: 24px 0;
}

.contacts {
    font-style: normal;
    margin-left: auto;
}

.contacts-list {
    display: flex;
    gap: 40px;
}

.contacts-link {
    display: block;
    padding: 24px 0;
}


.team-list {
    display: flex;
    gap: 24px;
}

.features-item {
    width: calc((100% - 72px) / 4);
}

.team-item {
background-color: #ffffff;
    border-radius: 0px 0px 4px 4px;
    box-shadow:
        0px 2px 1px rgba(46, 47, 66, 0.08),
        0px 1px 1px rgba(46, 47, 66, 0.16),
        0px 1px 6px rgba(46, 47, 66, 0.08);

}

.hero {
    background-color: #2e2f42;
        padding: 188px 0;
        max-width: 1440px;
        margin: 0 auto;
        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                rgba(46, 47, 66, 0.7)),
            url('../images/people-office.jpg');
        background-repeat: no-repeat;
        background-position: center;
        background-size: cover;
}

.hero-title {
    max-width: 496px;
    margin: 0 auto 48px;
    text-align: center;
    color: #ffffff;
}

.hero-button {
    display: block;
    min-width: 169px;
    height: 56px;
    padding: 16px 32px;
    border: none;
    border-radius: 4px;
    background-color: #4d5ae5;
    color: #ffffff;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.04em;
    cursor: pointer;
    margin: 0 auto;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    
}

.features {
    padding: 120px 0;
}

.team {
    background-color: #f4f4fd;
    padding: 120px 0;
}

.team-content {
    padding: 32px 16px;
}

.footer {
    background-color: #2e2f42;
    padding: 100px 0;
}

.logo {
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;
    text-decoration: none;
}

.header-logo {
    margin-right: 76px;
}

.logo-dark {
    color: #2e2f42;
}


.features-list {
    margin-top: 0;
    display: flex;
        gap: 24px;
}

.footer-text {
    max-width: 264px;
    color: #f4f4fd;
    line-height: 1.5;
    letter-spacing: 0.02em;
}

.portfolio {
    padding: 120px 0;
}

.section-title {
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    text-transform: capitalize;
    text-align: center;
    color: #2e2f42;
    margin-bottom: 72px;
}

.portfolio-list {
    display: flex;
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap: 48px;
}

.portfolio-item {
    width: calc((100% - 48px) / 3);
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-image {
    display: block;
    width: 100%;
}

.portfolio-content {
    padding: 32px 16px;
    border: 1px solid #e7e9fc;
    border-top: none;
}

.portfolio-subtitle {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
    margin-bottom: 8px;
}

.portfolio-text {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #434455;
}

.feature-subtitle {
    margin-bottom: 8px;
}

.team-member-name {
    margin-bottom: 8px;
    text-align: center;
}

.team-member-text {
    text-align: center;
    margin-bottom: 8px;
}

.portfolio-subtitle {
    margin-bottom: 8px;
}

.team-social-list {
    display: flex;
    justify-content: center;
    gap: 24px;
}

.team-social-item {
    width: 40px;
    height: 40px;
}

.team-social-link {
    width: 100%;
    height: 100%;
    background-color: #4d5ae5;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.team-social-link:hover,
.team-social-link:focus {
    background-color: #404bbf;
}

.team-social-icon {
    fill: #f4f4fd;
}

.portfolio-link {
    display: block;
    
}

.portfolio-item:hover,
.portfolio-item:focus-within {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
        0px 1px 1px rgba(46, 47, 66, 0.16),
        0px 2px 1px rgba(46, 47, 66, 0.08);
}

.portfolio-cover-wrap {
    position: relative;
    overflow: hidden;
}

.portfolio-cover-text {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 40px 32px;
    background-color: #4d5ae5;
    color: #f4f4fd;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item:hover .portfolio-cover-text,
.portfolio-item:focus-within .portfolio-cover-text {
    transform: translateY(0%);
}

.footer-logo-text {
    margin-right: 120px;
}

.footer-logo {
    display: inline-block;
    margin-bottom: 16px;
}

.logo-footer {
    color: #f4f4fd;
}

.footer-social-text {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    color: #ffffff;
    margin-bottom: 16px;
}

.footer-social-list {
    display: flex;
    gap: 16px;
}

.footer-social-item {
    width: 40px;
    height: 40px;
}

.footer-social-link {
    width: 100%;
    height: 100%;
    background-color: #4d5ae5;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.footer-social-link:hover,
.footer-social-link:focus {
    background-color: #31d0aa;
}

.footer-social-icon {
    fill: #f4f4fd;
}

.menu-link {
    position: relative;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-link:hover,
.menu-link:focus {
    color: #404bbf;
}

.current {
    color: #404bbf;
}

.current::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -1px;
    width: 100%;
    height: 4px;
    border-radius: 2px;
    background-color: #404bbf;
}

.hero-button:hover,
.hero-button:focus {
    background-color: #404bbf;
}

.contacts-link {
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contacts-link:hover,
.contacts-link:focus {
    color: #404bbf;
}

.features-icon-box {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 112px;
    background-color: #f4f4fd;
    border: 1px solid #8e8f99;
    border-radius: 4px;
    gap: 24px;
}

.footer-container {
    display: flex;
    align-items: baseline;
}

